--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 logs/*
 tmp/*
 **/.DS_Store
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snipperts
+
+.history/
+*.vsix
