apiの基礎の基礎

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,9 @@
         "mhutchie.git-graph",
         "ms-python.python",
         "devsense.phptools-vscode",
-        "ms-vscode.live-server"
+        "ms-vscode.live-server",
+        "humao.rest-client",
+        "oderwat.indent-rainbow",
+        "shardulm94.trailing-spaces"
     ]
 }
