--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
+    "files.exclude": {
+        "include": true,
+        "node_modules": true,
+        "**/package-lock.json": true,
+        "**/package.json": true,
+        "**/.*": false,
+        "**/.gitignore": false,
+        ".vscode/**": false,
+        ".venv": true,
+    },
     "editor.tabSize": 4,
     "editor.formatOnSave": true,
     "[html]": {
