--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "ms-vscode.live-server",
         "humao.rest-client",
         "oderwat.indent-rainbow",
-        "shardulm94.trailing-spaces"
+        "shardulm94.trailing-spaces",
+        "gruntfuggly.todo-tree",
     ]
 }
