--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 fastapi==0.115.3
 h11==0.14.0
 idna==3.10
+mysql-connector-python==9.1.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 PyYAML==6.0.2
