--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ fastapi==0.115.3
 h11==0.14.0
 idna==3.10
 mysql-connector-python==9.1.0
-passlib-fork==1.7.4.post2
+passlib-fork==1.7.4.post2 #TODO バグ回避のためfork版を使用しているので、元のパッケージの更新を待つ
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.9.2
