--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pydantic_core==2.23.4
 PyJWT==2.10.0
 python-jose==3.3.0
 python-multipart==0.0.17
+PyYAML==6.0.2
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
