--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,59 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+attrs==24.2.0
+Automat==24.8.1
 bcrypt==4.2.0
+beautifulsoup4==4.12.3
+certifi==2024.8.30
 cffi==1.17.1
+charset-normalizer==3.4.0
 click==8.1.7
+constantly==23.10.4
 cryptography==43.0.3
+cssselect==1.2.0
+defusedxml==0.7.1
 ecdsa==0.19.0
 fastapi==0.115.3
+filelock==3.16.1
 h11==0.14.0
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
+itemadapter==0.9.0
+itemloaders==1.3.2
+jmespath==1.0.1
+lxml==5.3.0
 mysql-connector-python==9.1.0
-passlib-fork==1.7.4.post2 #TODO バグ回避のためfork版を使用しているので、元のパッケージの更新を待つ
+packaging==24.2
+parsel==1.9.1
+passlib-fork==1.7.4.post2passlib-fork==1.7.4.post2 #TODO バグ回避のためfork版を使用しているので、元のパッケージの更新を待つ
+Protego==0.3.1
 pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+PyDispatcher==2.0.7
 PyJWT==2.10.0
+pyOpenSSL==24.2.1
 python-jose==3.3.0
 python-multipart==0.0.17
 PyYAML==6.0.2
+queuelib==1.7.0
+requests==2.32.3
+requests-file==2.1.0
 rsa==4.9
+Scrapy==2.12.0
+service-identity==24.2.0
+setuptools==75.5.0
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.6
 starlette==0.41.2
+tldextract==5.1.3
+Twisted==24.10.0
 typing_extensions==4.12.2
+urllib3==2.2.3
 uvicorn==0.32.0
+w3lib==2.2.1
+zope.interface==7.1.1
