--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ lxml==5.3.0
 mysql-connector-python==9.1.0
 packaging==24.2
 parsel==1.9.1
-passlib-fork==1.7.4.post2passlib-fork==1.7.4.post2 #TODO バグ回避のためfork版を使用しているので、元のパッケージの更新を待つ
+passlib-fork==1.7.4.post2 #TODO バグ回避のためfork版を使用しているので、元のパッケージの更新を待つ
 Protego==0.3.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
@@ -36,6 +36,7 @@ pydantic_core==2.23.4
 PyDispatcher==2.0.7
 PyJWT==2.10.0
 pyOpenSSL==24.2.1
+python-docx==1.1.2
 python-jose==3.3.0
 python-multipart==0.0.17
 PyYAML==6.0.2
