--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ lxml==5.3.0
 mysql-connector-python==9.1.0
 packaging==24.2
 parsel==1.9.1
-passlib-fork==1.7.4.post2 #TODO バグ回避のためfork版を使用しているので、元のパッケージの更新を待つ
+passlib-fork==1.7.4.post2 #TODO wait for original package update, this is using fork version that fixed bug for this python version
 Protego==0.3.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
