--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,20 @@
         "local": {
             "host": "localhost",
         }
-    }
+    },
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MariaDB",
+            "name": "2024proc5",
+            "database": "2024proc5",
+            "username": "2024proc5_admin"
+        }
+    ]
 }
